; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_avio.c_avpriv_io_move.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_avio.c_avpriv_io_move.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 (%struct.TYPE_8__*, %struct.TYPE_8__*)* }

@AVIO_FLAG_READ_WRITE = common dso_local global i32 0, align 4
@AVIO_FLAG_WRITE = common dso_local global i32 0, align 4
@ENOSYS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @avpriv_io_move(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca %struct.TYPE_8__*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* @AVIO_FLAG_READ_WRITE, align 4
  %11 = call i32 @ffurl_alloc(%struct.TYPE_8__** %6, i8* %9, i32 %10, i32* null)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %8, align 4
  store i32 %15, i32* %3, align 4
  br label %59

16:                                               ; preds = %2
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* @AVIO_FLAG_WRITE, align 4
  %19 = call i32 @ffurl_alloc(%struct.TYPE_8__** %7, i8* %17, i32 %18, i32* null)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %16
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %24 = call i32 @ffurl_close(%struct.TYPE_8__* %23)
  %25 = load i32, i32* %8, align 4
  store i32 %25, i32* %3, align 4
  br label %59

26:                                               ; preds = %16
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %28, align 8
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 0
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %31, align 8
  %33 = icmp eq %struct.TYPE_7__* %29, %32
  br i1 %33, label %34, label %50

34:                                               ; preds = %26
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 0
  %37 = load %struct.TYPE_7__*, %struct.TYPE_7__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %37, i32 0, i32 0
  %39 = load i32 (%struct.TYPE_8__*, %struct.TYPE_8__*)*, i32 (%struct.TYPE_8__*, %struct.TYPE_8__*)** %38, align 8
  %40 = icmp ne i32 (%struct.TYPE_8__*, %struct.TYPE_8__*)* %39, null
  br i1 %40, label %41, label %50

41:                                               ; preds = %34
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i32 0, i32 0
  %44 = load %struct.TYPE_7__*, %struct.TYPE_7__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %44, i32 0, i32 0
  %46 = load i32 (%struct.TYPE_8__*, %struct.TYPE_8__*)*, i32 (%struct.TYPE_8__*, %struct.TYPE_8__*)** %45, align 8
  %47 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %48 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %49 = call i32 %46(%struct.TYPE_8__* %47, %struct.TYPE_8__* %48)
  store i32 %49, i32* %8, align 4
  br label %53

50:                                               ; preds = %34, %26
  %51 = load i32, i32* @ENOSYS, align 4
  %52 = call i32 @AVERROR(i32 %51)
  store i32 %52, i32* %8, align 4
  br label %53

53:                                               ; preds = %50, %41
  %54 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %55 = call i32 @ffurl_close(%struct.TYPE_8__* %54)
  %56 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %57 = call i32 @ffurl_close(%struct.TYPE_8__* %56)
  %58 = load i32, i32* %8, align 4
  store i32 %58, i32* %3, align 4
  br label %59

59:                                               ; preds = %53, %22, %14
  %60 = load i32, i32* %3, align 4
  ret i32 %60
}

declare dso_local i32 @ffurl_alloc(%struct.TYPE_8__**, i8*, i32, i32*) #1

declare dso_local i32 @ffurl_close(%struct.TYPE_8__*) #1

declare dso_local i32 @AVERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
